--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
 <body>
 <div class="row" style="margin: 0px !important;">
 
-    <div class="col-sm-4 col-sm-offset-4 col-lg-2 col-lg-offset-5 col-xs-6 col-xs-offset-3" style="margin-top: 15vh">
+    <div class="col-sm-4 col-sm-offset-4 col-lg-2 col-lg-offset-5 col-xs-6 col-xs-offset-3" style="margin-top: 6em">
 
         <img src="img/logotipo.png" width="100%">
 
     </div>
 
-    <div class="col-xs-12" style="margin-top: 10vh; font-size: 3.5vh">
+    <div class="col-xs-12" style="margin-top: 2.5em; font-size: 2.2em">
 
         <p style="text-align: center; color: #01A3F4">Aprenda, Ensine, Compartilhe</p>
 
     </div>
-    <div class="col-xs-12" style="margin-top: 4vh; font-size: 2.5vh">
+    <div class="col-xs-12" style="margin-top: 1em; font-size: 1.8em">
 
         <p style="text-align: center; color: #848688"> Talks mensais sobre tecnologias e ferramentas do mundo
             developer</p>
@@ -51,9 +51,9 @@
 
 </div>
 
-<div style="margin-top: 15vh;border-top: solid #cccccc 1px;border-bottom: solid #cccccc 1px">
-    <div style="width: 6vh; background-color: #005A87; height: 45vh; float: left"></div>
-    <div style="width: 6vh; background-color: #01A3F4; height: 45vh; float: left"></div>
+<div style="margin-top: 10em;border-top: solid #cccccc 1px;border-bottom: solid #cccccc 1px">
+    <div style="width: 3.5em; background-color: #005A87; height: 25em; float: left"></div>
+    <div style="width: 3.5em; background-color: #01A3F4; height: 25em; float: left"></div>
 </div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
