--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 </div>
 
-<div style="margin-top: 10em;border-top: solid #cccccc 1px;border-bottom: solid #cccccc 1px">
+<div style="margin-top: 10em;border: solid #cccccc 1px; height: 25.14em;">
     <div style="width: 3.5em; background-color: #005A87; height: 25em; float: left"></div>
     <div style="width: 3.5em; background-color: #01A3F4; height: 25em; float: left"></div>
 </div>
